<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".CalculatorActivity">


    <Button
        android:id="@+id/addButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="+" />

    <Button
        android:id="@+id/sumButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addButton"
        android:layout_toLeftOf="@+id/addButton"
        android:layout_toStartOf="@+id/addButton"
        android:text="=" />

    <Button
        android:id="@+id/button0"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sumButton"
        android:layout_toLeftOf="@+id/sumButton"
        android:layout_toStartOf="@+id/sumButton"
        android:text="0" />

    <Button
        android:id="@+id/clearButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button0"
        android:layout_toLeftOf="@+id/button0"
        android:layout_toStartOf="@+id/button0"
        android:text="C" />

    <Button
        android:id="@+id/button1"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button0"
        android:layout_alignLeft="@+id/clearButton"
        android:layout_alignStart="@+id/clearButton"
        android:text="@string/char1" />

    <Button
        android:id="@+id/button2"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sumButton"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/char2" />

    <Button
        android:id="@+id/button3"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/substractButton"
        android:layout_alignBottom="@+id/substractButton"
        android:layout_toEndOf="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:text="@string/char3" />

    <Button
        android:id="@+id/button4"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:text="@string/char4" />

    <Button
        android:id="@+id/button5"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/char5" />

    <Button
        android:id="@+id/button6"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/char6" />

    <Button
        android:id="@+id/multiplyButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_toEndOf="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:text="x" />

    <Button
        android:id="@+id/button7"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:text="@string/char7" />

    <Button
        android:id="@+id/button8"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button5"
        android:layout_toEndOf="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:text="@string/char8" />

    <Button
        android:id="@+id/button9"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:text="@string/char9" />

    <Button
        android:id="@+id/devideButton"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/multiplyButton"
        android:layout_toEndOf="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:text="/" />

    <TextView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/resultView"
        android:height="50dp"
        android:paddingLeft="30dp"
        android:text="0"
        android:textSize="40dp" />

    <Button
        android:id="@+id/substractButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiplyButton"
        android:layout_toEndOf="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:text="-"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:width="200dp"
        android:height="50dp"
        android:paddingLeft="14dp"
        android:textSize="25dp"/>



</RelativeLayout>
